tests/Column/expected
[<[<"Bob", 12, "blue"], [<"Alice", 17, "green"], [<"Eve", 13, "red"]]

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
Error: Can't find an implementation for HasField [<("name" :! String), ("age" :! Nat), ("favorite color" :! String)] "grade" ?sa.

(Interactive):1:5--1:28
 1 |     column "grade" students
         ^^^^^^^^^^^^^^^^^^^^^^^


[<[<"Bob", 12, "blue", 87], [<"Alice", 17, "green", 85], [<"Eve", 13, "red", 77]]

[<"Bob", "Alice", "Eve"]
[<12, 17, 13]
[<87, 85, 77]

[<[<"Bob", 12, "blue", 87, "A"], [<"Alice", 17, "green", 85, "A"], [<"Eve", 13, "red", 77, "B"]]

[<[<"Bob", "blue"], [<"Alice", "green"], [<"Eve", "red"]]
[<[<"Bob", 12], [<"Alice", 17], [<"Eve", 13]]
Error: Can't find an implementation for HasField [<("name" :! String), ("age" :! Nat), ("favorite color" :! String)] "grade" ?sa.

(Interactive):1:5--1:32
 1 |     dropColumn "grade" students
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^


